<resources>
    <string name="app_name">Thorium_Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="map_fragment_label">Map Fragment</string>
    <string name="next">Next</string>
    <string name="home">Home</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="type" id="shit">Type:</string>
    <string name="time">Time:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="cid">CID:</string>
    <string name="plmn">PLMN:</string>
    <string name="rssi">RSSI:</string>
    <string name="level">Level:</string>
    <string name="rsrp">RSRP:</string>
    <string name="rsrq">RSRQ:</string>
    <string name="ecn0">ECN0:</string>
    <string name="cpich">CPICH:</string>
    <string name="jitter">Jitter:</string>
    <string name="avg_latancy">Avg. Latancy:</string>
    <string name="downlink">Down Link Speed:</string>
    <string name="uplink">Up Link Speed:</string>
</resources>
