<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="false"
    android:layout_marginBottom="5dp"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:showDividers="middle"
    android:layout_margin="10dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">


        <TextView
            android:id="@+id/type"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/type"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/time"
            style="@style/cell_strength_title"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="sans-serif-medium"
            android:text="@string/time"
            android:textSize="16sp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/latitude"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/latitude"
            android:textSize="16sp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/longitude"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/longitude"
            android:textSize="16sp"
            android:layout_margin="2dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cid"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cid"
            android:textSize="16sp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/plmn"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/plmn"
            android:textSize="16sp"
            android:layout_margin="2dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/level"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/level"
            android:textSize="16sp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/rssi"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rssi"
            android:textSize="16sp"
            android:layout_margin="2dp"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rsrp"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rsrp"
            android:textSize="16sp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/rsrq"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rsrq"
            android:textSize="16sp"
            android:layout_margin="2dp"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/uplink"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/uplink"
            android:textSize="14sp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/downlink"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/downlink"
            android:textSize="14sp"
            android:layout_margin="2dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/avg_latancy"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/avg_latancy"
            android:textSize="12sp"
            android:layout_margin="2dp"/>
        <TextView
            android:id="@+id/jitter"
            style="@style/cell_strength_title"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/jitter"
            android:textSize="16sp"
            android:layout_margin="2dp"/>


    </LinearLayout>

</LinearLayout>
